# coco_filters

./: .gitignore  BearFace.py  CMakeLists.txt  CatFace.py  FaceFilters.py  MonkeyFace.py  README.md  face_filters.py  face_filters_opencv.py  filters.py  filters_v2.py  filtros.py  filtros_v2.py  package.xml
include/: AnimalFaceNode.hpp  FaceFilterBase.hpp  FaceMaskFilter.hpp  HatFilter.hpp
include/filters/: FaceFilterBase.hpp  FaceMaskFilter.hpp  GlassesFilter.hpp  HatFilter.hpp  MouthFilter.hpp  NoseFilter.hpp
include/mask/: AnimalFilter.hpp
scripts/: BearFace.py  CatFace.py  FaceFilters.py  MonkeyFace.py  face_landmark_detector.py
scripts/utils/: AdvancedFaceFilter.py  FaceFilterBase.py  Filters.py
src/: AnimalFaceNode.cpp  BearFaceNode.cpp  FaceFilterNode.cpp  face_filter_node.cpp
src/filters/: FaceFilterBase.cpp  FaceMaskFilter.cpp  GlassesFilter.cpp  HatFilter.cpp  MouthFilter.cpp  NoseFilter.cpp
src/mask/: AnimalFilter.cpp
utils/: AdvancedFaceFilter.py  FaceFilterBase.py  Filters.py
